Implementa cancelamento de assinatura com Mercado Pago

--- a/public/gerenciar.html
+++ b/public/gerenciar.html
@@ -2673,9 +2673,7 @@
         }
 
         function cancelarAssinatura() {
-            if (confirm('Tem certeza que deseja cancelar sua assinatura?')) {
-                alert('Assinatura cancelada.');
-            }
+            cancelSubscription();
         }
 
         function excluirConta() {
