fix ids for chat input and button

--- a/public/index.html
+++ b/public/index.html
@@ -476,8 +476,8 @@
       </div>
 
       <div class="input-area">
-        <input type="text" class="chat-input" id="user-input" placeholder="Digite sua mensagem..." autocomplete="off" />
-        <button onclick="sendMessage()" id="sendBtn" class="send-button">
+        <input type="text" class="chat-input" id="chatInput" placeholder="Digite sua mensagem..." autocomplete="off" />
+        <button onclick="sendMessage()" id="sendButton" class="send-button">
           <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18"/>
           </svg>
