Clean auth.js and fix SMS section

--- a/public/login.html
+++ b/public/login.html
@@ -133,6 +133,8 @@
   <button class="btn-plus" id="confirmCodeBtn">Confirmar código</button>
 </div>
 
+  </div>
+
 
   <!-- Scripts do Firebase e app -->
   <script type="module" src="auth.js"></script>
