respostas com base na entrevista

--- a/public/index.html
+++ b/public/index.html
@@ -120,5 +120,6 @@
 
     <!-- Script integrado com as funcionalidades existentes -->
     <script src="script.js"></script>
+    <script src="plan-monitor.js"></script>
 </body>
 </html>
