--- a/public/login.html
+++ b/public/login.html
@@ -527,6 +527,6 @@
   </script>
 
   <!-- Scripts do Firebase e app -->
-  <script type="module" src="auth.js"></script>
+  <script type="module" src="auth.js?v=20250128-1702"></script>
 </body>
 </html>
