--- a/public/firebase-diagnostic.html
+++ b/public/firebase-diagnostic.html
@@ -97,14 +97,15 @@
             signInWithPhoneNumber 
         } from 'https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js';
 
-        // Configuração Firebase (mesma do projeto)
+        // Configuração Firebase (atualizada para consistência)
         const firebaseConfig = {
-            apiKey: "AIzaSyBwJETlTmROo8wSi_KaasJE7ex_OW2O5yo",
-            authDomain: "prod-ai-teste.firebaseapp.com",
-            projectId: "prod-ai-teste",
-            storageBucket: "prod-ai-teste.firebasestorage.app",
-            messagingSenderId: "590918971714",
-            appId: "1:590918971714:web:ab8afe99a3b9a6e2b82d3f"
+            apiKey: "AIzaSyBKby0RdIOGorhrfBRMCWnL25peU3epGTw",
+            authDomain: "prodai-58436.firebaseapp.com",
+            projectId: "prodai-58436",
+            storageBucket: "prodai-58436.appspot.com",
+            messagingSenderId: "801631191322",
+            appId: "1:801631322:web:80e3d29cf7468331652ca3",
+            measurementId: "G-MBDHDYN6Z0"
         };
 
         // Variáveis globais
