--- a/public/index.html
+++ b/public/index.html
@@ -29,14 +29,14 @@
         <div class="vanta-background" id="vanta-bg"></div>
         
         <!-- Plano de fundo com rede neural (mantido como fallback) -->
-        <img src="fundo.jpg" alt="Fundo futurista" class="fundo" />
+        <img src="fundo.webp" alt="Fundo futurista" class="fundo" />
 
         <!-- Elementos do cenário -->
-        <img src="robo.png" alt="Robô futurista" class="robo" />
-        <img src="mesa.png" alt="Mesa" class="mesa" />
-        <img src="caixas.png" alt="Caixas de som principais" class="caixas" />
-        <img src="notebook.png" alt="Notebook" class="notebook" />
-        <img src="teclado.png" alt="teclado" class="teclado" />
+        <img src="robo.webp" alt="Robô futurista" class="robo" />
+        <img src="mesa.webp" alt="Mesa" class="mesa" />
+        <img src="caixas.webp" alt="Caixas de som principais" class="caixas" />
+        <img src="notebook.webp" alt="Notebook" class="notebook" />
+        <img src="teclado.webp" alt="teclado" class="teclado" />
         
         <!-- Overlay de partículas extras -->
         <div class="particles-overlay"></div>
@@ -121,5 +121,6 @@
     <!-- Script integrado com as funcionalidades existentes -->
     <script src="script.js?v=20250128-1711"></script>
     <script src="plan-monitor.js"></script>
+    <script src="force-visibility.js"></script>
 </body>
 </html>
