--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
         <!-- Estado Inicial (Welcome) -->
         <div class="chatbot-welcome-state" id="chatbotWelcomeState">
             <div class="chatbot-robot-wrapper">
-                <img src="robo 2.png" alt="PROD.AI Robot" class="chatbot-main-robot" id="chatbotMainRobot">
+                <img src="robo 2.webp" alt="PROD.AI Robot" class="chatbot-main-robot" id="chatbotMainRobot">
             </div>
             
             <div class="chatbot-branding" id="chatbotBranding">
