--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Prod.AI - Mentor Virtual</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="performance-fix.css">
     
     <!-- Fontes e ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     
-    <!-- Bibliotecas para efeitos visuais -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.24/vanta.net.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <!-- Bibliotecas para efeitos visuais - TEMPORARIAMENTE DESABILITADO PARA PERFORMANCE -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.24/vanta.net.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> -->
 
     <!-- Firebase e FingerprintJS -->
     <script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js"></script>
@@ -22,7 +23,7 @@
     <script type="module" src="firebase.js"></script>
     <script src="auth.js" defer></script>
 </head>
-<body>
+<body class="performance-mode">
     <!-- Cenário 3D -->
     <div class="cenario">
         <!-- Container para o fundo animado Vanta.js -->
