--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,8 @@
 
     <!-- Script integrado com as funcionalidades existentes -->
     <script src="script.js?v=20250128-1711"></script>
-    <script src="plan-monitor.js"></script>
-    <script src="force-visibility.js"></script>
+    <!-- TEMPORARIAMENTE DESABILITADO PARA TESTE DE PERFORMANCE -->
+    <!-- <script src="plan-monitor.js"></script> -->
+    <!-- <script src="force-visibility.js"></script> -->
 </body>
 </html>
