--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Prod.AI - Mentor Virtual</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- PERFORMANCE PRIMEIRO - DESABILITA TUDO -->
     <link rel="stylesheet" href="performance-subtle.css">
+    <!-- CSS ORIGINAL POR ÚLTIMO -->
+    <link rel="stylesheet" href="style.css">
     
     <!-- Fontes e ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
