--- a/public/index.html
+++ b/public/index.html
@@ -126,8 +126,8 @@
     </div>
 
     <!-- Script integrado com as funcionalidades existentes -->
-    <!-- Otimizado: Adicionado defer para carregamento não-bloqueante -->
-    <script src="script.js?v=20250128-1711" defer></script>
+    <!-- Otimizado: Removido cache busting desnecessário para melhor cache -->
+    <script src="script.js" defer></script>
     <!-- Scripts de monitoramento desabilitados para performance -->
     <!-- <script src="plan-monitor.js"></script> -->
     <!-- <script src="force-visibility.js"></script> -->
