--- a/public/index.html
+++ b/public/index.html
@@ -32,16 +32,16 @@
         <!-- 🚨 POSSÍVEL OTIMIZAÇÃO: 
              Verificar se todas essas imagens são realmente necessárias
              Múltiplas imagens grandes podem causar overhead de memória -->
-        <img src="robo.webp" alt="Robô futurista" class="robo" />
-        <img src="mesa.webp" alt="Mesa" class="mesa" />
-        <img src="caixas.webp" alt="Caixas de som principais" class="caixas" />
-        <img src="notebook.webp" alt="Notebook" class="notebook" />
-        <img src="teclado.webp" alt="teclado" class="teclado" />
+        <img src="robo.webp" alt="Robô futurista" class="robo fade-in-start" />
+        <img src="mesa.webp" alt="Mesa" class="mesa fade-in-start" />
+        <img src="caixas.webp" alt="Caixas de som principais" class="caixas fade-in-start" />
+        <img src="notebook.webp" alt="Notebook" class="notebook fade-in-start" />
+        <img src="teclado.webp" alt="teclado" class="teclado fade-in-start" />
         
         <!-- Overlay de partículas extras -->
         <!-- 🚨 GARGALO: Div vazia que pode estar sendo usada para gerar partículas CSS
              Pode estar causando renderizações extras -->
-        <div class="particles-overlay"></div>
+        <div class="particles-overlay fade-in-start"></div>
     </div>
 
     <!-- Chatbot posicionado no monitor -->
