--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,8 @@
                            placeholder="Digite aqui..."
                            maxlength="500">
                     <button class="chatbot-send-button" id="chatbotSendButton">
-                        <svg width="20" height="20" viewBox="0 0 512 512" fill="currentColor">
-                            <path d="M498.1 5.6c10.1 7 15.4 19.1 13.5 31.2l-64 416c-1.5 9.7-7.4 18.2-16 23s-18.9 5.4-28 1.6L284 418.6l-90.5 90.5c-10.8 10.8-25.3 15.8-40.5 13.9C137.7 521.1 128 510.5 128 498.1V456c0-12.1 4.9-23.2 13.4-31.6L245.6 320 64 284c-15.1-3.8-25.3-17.4-25.3-33.5 0-12.1 6.8-23.2 17.5-28.7l384-192c9.1-4.5 20.1-3.9 28.6 1.8z"/>
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M2 21L23 12L2 3V10L17 12L2 14V21Z" fill="white" stroke="none"/>
                         </svg>
                     </button>
                 </div>
@@ -104,8 +104,8 @@
                            placeholder="Digite sua mensagem..."
                            maxlength="500">
                     <button class="chatbot-active-send-btn" id="chatbotActiveSendBtn">
-                        <svg width="20" height="20" viewBox="0 0 512 512" fill="currentColor">
-                            <path d="M498.1 5.6c10.1 7 15.4 19.1 13.5 31.2l-64 416c-1.5 9.7-7.4 18.2-16 23s-18.9 5.4-28 1.6L284 418.6l-90.5 90.5c-10.8 10.8-25.3 15.8-40.5 13.9C137.7 521.1 128 510.5 128 498.1V456c0-12.1 4.9-23.2 13.4-31.6L245.6 320 64 284c-15.1-3.8-25.3-17.4-25.3-33.5 0-12.1 6.8-23.2 17.5-28.7l384-192c9.1-4.5 20.1-3.9 28.6 1.8z"/>
+                        <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
+                            <path d="M2 21L23 12L2 3V10L17 12L2 14V21Z" fill="white" stroke="none"/>
                         </svg>
                     </button>
                 </div>
